--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   cloud_firestore: ^5.5.0
   firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
+  typed_data: ^1.4.0
+  firebase_storage: ^12.3.6
+  file_picker: ^8.1.4
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
